# SudokuSolver

./: .gitignore  .travis.yml  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/allanrodriguez/sudokusolver/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: digits_svm.yml
app/src/main/cpp/: CMakeLists.txt  find_sudoku.cpp  log.cpp  parseocrjni.cpp  read_cells.cpp  sudoku_ocr.cpp  sudokuocrreader.cpp  sudokuocrreader.h
app/src/main/cpp/include/: core.h  find_sudoku.h  read_cells.h
app/src/main/java/com/allanrodriguez/sudokusolver/: Application.kt
app/src/main/java/com/allanrodriguez/sudokusolver/abstractions/: Constants.kt  FlashState.kt  IEnterPuzzleViewModel.kt  ISudokuSolverFactory.kt  Licenses.kt
app/src/main/java/com/allanrodriguez/sudokusolver/activities/: CameraActivity.kt  MainActivity.kt
app/src/main/java/com/allanrodriguez/sudokusolver/di/components/: ApplicationComponent.kt
app/src/main/java/com/allanrodriguez/sudokusolver/di/modules/: FragmentModule.kt  SudokuSolverFactoryModule.kt  ViewModelFactoryModule.kt  ViewModelModule.kt
app/src/main/java/com/allanrodriguez/sudokusolver/factories/: EnterPuzzleViewModelFactory.kt  SudokuSolverFactory.kt  ViewModelFactory.kt
app/src/main/java/com/allanrodriguez/sudokusolver/fragments/: AboutDialogFragment.kt  BottomNavigationDrawerFragment.kt  CameraDialogFragment.kt  EnterPuzzleFragment.kt  ParseOcrFragment.kt
app/src/main/java/com/allanrodriguez/sudokusolver/model/: CameraSession.kt
app/src/main/java/com/allanrodriguez/sudokusolver/utilities/: AutoFitPreviewBuilder.kt  FragmentExtensions.kt  ViewExtensions.kt
app/src/main/java/com/allanrodriguez/sudokusolver/viewmodels/: CameraDialogViewModel.kt  CellViewModel.kt  EnterPuzzleViewModel.kt  LicenseViewModel.kt
app/src/main/java/com/allanrodriguez/sudokusolver/views/: AutoFitTextureView.kt  FlashButton.kt  LicensesListAdapter.kt
app/src/main/res/anim/: fade_out.xml  rotate_180clockwise.xml  rotate_180counterclockwise.xml
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  app_bar_main.xml  content_main.xml  fragment_about_dialog.xml  fragment_bottom_navigation_drawer.xml  fragment_camera_dialog.xml  fragment_enter_puzzle.xml  fragment_parse_ocr.xml  license_content.xml  license_row.xml  nav_header.xml  sudoku_cell.xml  sudoku_row.xml  sudoku_table.xml
app/src/main/res/menu/: bottom_nav_drawer.xml  main.xml  nav_drawer.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-es/: strings.xml
app/src/test/java/com/allanrodriguez/sudokusolver/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
libbruteforcesudokusolver/: build.gradle
libbruteforcesudokusolver/src/main/java/com/allanrodriguez/libbruteforcesudokusolver/: Puzzle.kt  SudokuSolver.kt
libsudokusolverkt/: build.gradle
(+14 files in other folders)
